k8s/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qa-ingress
  namespace: qa
  annotations:
    kubernetes.io/ingress.class: "gce"

spec:
  rules:
  - http:
      paths:
      - path: /qa
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
