k8s/qa/egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: qa-egress
  namespace: qa

spec:
  podSelector: {}

  policyTypes:
  - Egress

  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
